// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render basic correctly 1`] = `
"<view class=\\"nut-searchbar\\">
  <!--v-if-->
  <view class=\\"nut-searchbar__search-input\\">
    <!--v-if-->
    <view class=\\"nut-searchbar__input-inner\\">
      <form action=\\"#\\"><input class=\\"nut-searchbar__input-bar\\" type=\\"text\\" maxlength=\\"9999\\" placeholder=\\"请输入\\"></form>
      <view class=\\"nut-searchbar__input-clear\\" style=\\"display: none;\\">
        <nut-icon name=\\"circle-close\\" size=\\"12\\" color=\\"#555\\"></nut-icon>
      </view>
    </view>
    <!--v-if-->
  </view>
  <!--v-if-->
</view>"
`;

exports[`render correctly 1`] = `
"<view class=\\"nut-searchbar\\">
  <!--v-if-->
  <view class=\\"nut-searchbar__search-input\\">
    <!--v-if-->
    <view class=\\"nut-searchbar__input-inner\\">
      <form action=\\"#\\"><input class=\\"nut-searchbar__input-bar\\" type=\\"text\\" maxlength=\\"9999\\" placeholder=\\"请输入\\"></form>
      <view class=\\"nut-searchbar__input-clear\\" style=\\"display: none;\\">
        <nut-icon name=\\"circle-close\\" size=\\"12\\" color=\\"#555\\"></nut-icon>
      </view>
    </view>
    <!--v-if-->
  </view>
  <!--v-if-->
</view>"
`;

exports[`should emit search event when enter key is pressed 1`] = `undefined`;

exports[`should render background prop correctly 1`] = `
"<view class=\\"nut-searchbar\\">
  <!--v-if-->
  <view class=\\"nut-searchbar__search-input\\">
    <!--v-if-->
    <view class=\\"nut-searchbar__input-inner\\">
      <form action=\\"#\\"><input class=\\"nut-searchbar__input-bar\\" type=\\"text\\" maxlength=\\"9999\\" placeholder=\\"请输入\\"></form>
      <view class=\\"nut-searchbar__input-clear\\" style=\\"display: none;\\">
        <nut-icon name=\\"circle-close\\" size=\\"12\\" color=\\"#555\\"></nut-icon>
      </view>
    </view>
    <!--v-if-->
  </view>
  <!--v-if-->
</view>"
`;

exports[`should render rightout slot correctly 1`] = `
"<view class=\\"nut-searchbar\\">
  <!--v-if-->
  <view class=\\"nut-searchbar__search-input\\">
    <!--v-if-->
    <view class=\\"nut-searchbar__input-inner\\">
      <form action=\\"#\\"><input class=\\"nut-searchbar__input-bar\\" type=\\"text\\" maxlength=\\"9999\\" placeholder=\\"请输入\\"></form>
      <view class=\\"nut-searchbar__input-clear\\" style=\\"display: none;\\">
        <nut-icon name=\\"circle-close\\" size=\\"12\\" color=\\"#555\\"></nut-icon>
      </view>
    </view>
    <!--v-if-->
  </view>
  <view class=\\"nut-searchbar__search-icon nut-searchbar__right-search-icon\\">搜索</view>
</view>"
`;

exports[`slot test 1`] = `
"<view class=\\"nut-searchbar\\">
  <!--v-if-->
  <view class=\\"nut-searchbar__search-input\\">
    <!--v-if-->
    <view class=\\"nut-searchbar__input-inner\\">
      <form action=\\"#\\"><input class=\\"nut-searchbar__input-bar\\" type=\\"text\\" maxlength=\\"9999\\" placeholder=\\"请输入\\"></form>
      <view class=\\"nut-searchbar__input-clear\\" style=\\"display: none;\\">
        <nut-icon name=\\"circle-close\\" size=\\"12\\" color=\\"#555\\"></nut-icon>
      </view>
    </view>
    <!--v-if-->
  </view>
  <!--v-if-->
</view>"
`;
